--- a/index.html
+++ b/index.html
@@ -63,14 +63,19 @@
     </main>
 
     <footer>
-        <div>
-            <a href="https://github.com/amarillafacundo" target="_blank">GitHub</a>
-            <a href="https://www.linkedin.com/in/facundo-emanuel-amarilla/" target="_blank">LinkedIn</a>
+        <div class="social-icons">
+            <a href="https://github.com/amarillafacundo" target="_blank" aria-label="GitHub">
+                <img src="images/github_logo.svg" alt="GitHub logo">
+            </a>
+            <a href="https://www.linkedin.com/in/facundo-emanuel-amarilla" target="_blank" aria-label="LinkedIn">
+                <img src="images/linkedin_logo.svg" alt="LinkedIn logo">
+            </a>
         </div>
+    
         <p>&copy; <span id="currentyear"></span> Facundo Amarilla | Argentina</p>
         <p id="lastModified"></p>
-
     </footer>
+      
 
 </body>
 
