--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Facundo Amarilla's Course Home Page for WDD 231.">
+    <meta name="description" content="Welcome to Facundo Amarilla's WDD 231 Course Home Page. Explore assignments, projects, and progress in frontend web development.">
     <meta name="author" content="Facundo Amarilla">
     <title>Facundo Amarilla | WDD 231</title>
 
@@ -38,7 +38,7 @@
     </nav>
 
     <main>
-        <h1>Home</h1>
+        <h1>Facundo Amarilla | WDD 231 Home</h1>
 
         <section>
             <h2>Courses</h2>
