--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html lang="en">
 
 <head>
+    <!-- Open Graph / Facebook Meta Tags -->
+    <meta property="og:title" content="Facundo Amarilla | WDD 231 Course Home Page">
+    <meta property="og:description" content="Explore assignments and projects by Facundo Amarilla for the Web Frontend Development I course at BYU-Idaho.">
+    <meta property="og:image" content="https://facundoemanuelamarilla.github.io/wdd231/images/github_logo">
+    <meta property="og:url" content="https://facundoemanuelamarilla.github.io/wdd231/">
+    <meta property="og:type" content="website">
+
     <link rel="icon" href="favicon.ico">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
