--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- Open Graph / Facebook Meta Tags -->
     <meta property="og:title" content="Facundo Amarilla | WDD 231 Course Home Page">
     <meta property="og:description" content="Explore assignments and projects by Facundo Amarilla for the Web Frontend Development I course at BYU-Idaho.">
-    <meta property="og:image" content="https://facundoemanuelamarilla.github.io/wdd231/images/profile_image">
+    <meta property="og:image" content="https://facundoemanuelamarilla.github.io/wdd231/images/profile_image.jpeg">
     <meta property="og:url" content="https://amarillafacundo.github.io/wdd231/index.html">
     <meta property="og:type" content="website">
 
