--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta property="og:title" content="Facundo Amarilla | WDD 231 Course Home Page">
     <meta property="og:description" content="Explore assignments and projects by Facundo Amarilla for the Web Frontend Development I course at BYU-Idaho.">
     <meta property="og:image" content="https://facundoemanuelamarilla.github.io/wdd231/images/profile_image.jpeg">
-    <meta property="og:url" content="https://amarillafacundo.github.io/wdd231/index.html">
+    <meta property="og:url" content="https://amarillfacundo.github.io/wdd231/index.html">
     <meta property="og:type" content="website">
 
     <link rel="icon" href="favicon.ico">
