--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:description" content="Explore assignments and projects by Facundo Amarilla for the Web Frontend Development I course at BYU-Idaho.">
     <meta property="og:image" content="https://facundoemanuelamarilla.github.io/wdd231/images/profile_image.jpeg">
     <meta property="og:url" content="https://amarillfacundo.github.io/wdd231/index.html">
-    <meta property="og:type" content="">
+    <meta property="og:type" content="website">
 
     <link rel="icon" href="favicon.ico">
     <meta charset="UTF-8">
