update open graph

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta property="og:title" content="Facundo Amarilla | WDD 231 Course Home Page">
     <meta property="og:description"
         content="Welcome to Facundo Amarilla’s Web Frontend Development course homepage. View assignments, projects, and progress in web development.">
-    <meta property="og:image" content="https://facundoamarilla.github.io/wdd231/images/logo.svg">
-    <meta property="og:url" content="https://facundoamarilla.github.io/wdd231/">
+    <meta property="og:image" content="https://amarillafacundo.github.io/wdd231/images/profile.webp">
+    <meta property="og:url" content="https://amarillafacundo.github.io/wdd231/index.html">
     <meta property="og:type" content="website">
 
 
