--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -43,11 +43,13 @@
     <main>
         <h1>Santa Fe Chamber Directory</h1>
         <section class="view-toggle">
-            <button id="grid">Grid View</button>
+            <h2>View Options</h2> <button id="grid">Grid View</button>
             <button id="list">List View</button>
         </section>
 
-        <section id="directory" class="grid"></section>
+        <section id="directory" class="grid">
+            <h2>Chamber Members</h2>
+        </section>
     </main>
 
     <footer>
