--- a/chamber/index.html
+++ b/chamber/index.html
@@ -9,44 +9,40 @@
 
     <meta property="og:title" content="Santa Fe Chamber of Commerce | Home">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://example.com/images/chamber_banner.webp">
-    <meta property="og:url" content="https://yourusername.github.io/chamber/index.html">
-    <meta property="og:description"
-        content="Official website for the Santa Fe Chamber of Commerce. Promoting local businesses and community growth.">
+    <meta property="og:image" content="https://amarillafacundo.github.io/wdd231/chamber/images/argentine_commerce.png">
+    <meta property="og:url" content="https://facundoemanuelamarilla.github.io/wdd231/chamber/directory.html">
+    <meta property="og:description" content="Official website for the Santa Fe Chamber of Commerce. Promoting local businesses and community growth.">
 
     <title>Santa Fe Chamber of Commerce | Home</title>
 
     <link rel="icon" href="images/chamber_commerce.ico" type="image/chamber_commerce">
 
-    <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/directory.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Oswald:wght@300&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="styles/directory.css">
 </head>
 
 <body>
     <header>
-        <h1>Santa Fe Chamber of Commerce</h1>
         <nav>
-            <ul>
-                <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="directory.html">Directory</a></li>
-                <li><a href="join.html">Join</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
+            <a href="index.html" class="active">Home</a>
+            <a href="directory.html">Directory</a>
+            <a href="#">Join</a>
+            <a href="#">Contact</a>
         </nav>
     </header>
 
-    <main>
+    <main class="home-main">
         <section class="hero">
-            <h2>Welcome to Santa Fe!</h2>
-            <img src="images/santa_fe_hero.webp" alt="Santa Fe Cityscape" loading="lazy">
-            <button class="cta-button">Join the Chamber!</button>
+            <img src="images/hero-chamber.webp" alt="Santa Fe Chamber of Commerce Building">
+            <h2>Welcome to Santa Fe Chamber of Commerce!</h2>
+            <a href="#" class="cta-button">Join Today!</a>
         </section>
 
         <section class="events">
-            <h2>Upcoming Events</h2>
+            <h2>Event Highlights</h2>
             <div id="event-highlights">
                 <p>Check back soon for exciting events!</p>
             </div>
@@ -67,7 +63,9 @@
             <h2>Latest News</h2>
             <article>
                 <h3>Chamber Announces New Initiative</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat.</p>
                 <a href="#">Read More</a>
             </article>
         </section>
@@ -81,12 +79,11 @@
 
         <section class="join-us">
             <h2>Become a Member!</h2>
-            <p>Support local businesses and grow your network.</p>
+            <p>Support local businesses and grow your network. Join the Santa Fe Chamber of Commerce today!</p>
             <button class="join-button">Learn More</button>
         </section>
 
     </main>
-
     <footer>
         <p>&copy; <span id="year"></span> Facundo Amarilla | WDD 231 | Santa Fe, Argentina</p>
         <p id="lastModified"></p>
