--- a/chamber/index.html
+++ b/chamber/index.html
@@ -60,7 +60,9 @@
             <h2>Weather in Santa Fe</h2>
             <p id="current-temp"></p>
             <figure>
-                <img id="weather-icon" src="" alt="" />
+                <img id="weather-icon" 
+                src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw==" 
+                alt="Weather icon">
                 <figcaption id="weather-desc"></figcaption>
             </figure>
         </section>
