--- a/chamber/index.html
+++ b/chamber/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="Santa Fe Chamber of Commerce | Home">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://amarillafacundo.github.io/wdd231/chamber/images/argentine_commerce.png">
-    <meta property="og:url" content="https://facundoemanuelamarilla.github.io/wdd231/chamber/directory.html">
+    <meta property="og:url" content="https://facundoemanuelamarilla.github.io/wdd231/chamber/index.html">
     <meta property="og:description" content="Official website for the Santa Fe Chamber of Commerce. Promoting local businesses and community growth.">
 
     <title>Santa Fe Chamber of Commerce | Home</title>
@@ -37,8 +37,7 @@
     <main class="home-main">
         <section class="hero">
             <img src="images/hero-chamber.webp" alt="Santa Fe Chamber of Commerce Building">
-            <h2>Welcome to Santa Fe Chamber of Commerce!</h2>
-            <a href="#" class="cta-button">Join Today!</a>
+            <h1>Welcome to Santa Fe Chamber of Commerce!</h1> <a href="#" class="cta-button">Join Today!</a>
         </section>
         
         <section class="spotlight">
