--- a/chamber/index.html
+++ b/chamber/index.html
@@ -40,14 +40,6 @@
             <h1>Welcome to Santa Fe Chamber of Commerce!</h1> <a href="#" class="cta-button">Join Today!</a>
         </section>
         
-        <section class="spotlight">
-            <h2>Member Spotlights</h2>
-            <div class="spotlight-container" id="spotlights">
-                
-            </div>
-        </section>
-
-
         <section class="events">
             <h2>Event Highlights</h2>
             <div id="event-highlights">
@@ -59,7 +51,7 @@
             <h2>Weather in Santa Fe</h2>
             <p id="current-temp"></p>
             <figure>
-                <img id="weather-icon" src="images/placeholder.png" alt="Weather icon">
+                <img id="weather-icon" src="images/placeholder.png" alt="Weather icon" width="80" height="80" loading="lazy">
                 <figcaption id="weather-desc"></figcaption>
             </figure>
         </section>
