update last time

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -72,9 +72,8 @@
             <h2>Latest News</h2>
             <article>
                 <h3>Chamber Announces New Initiative</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.</p>
+                <p>The Santa Fe Chamber of Commerce is launching a new mentorship program to help small businesses grow and connect with
+                    experienced entrepreneurs in the region. More details will be shared in our next member meeting.</p>
                 <a href="#">Read More</a>
             </article>
         </section>
