--- a/chamber/join.html
+++ b/chamber/join.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <meta name="author" content="Facundo Amarilla">
     <meta name="description" content="">
+    <meta property="og:title" content="Santa Fe Chamber of Commerce | Join">
+    <meta property="og:type" content="website">
     <meta property="og:image" content="https://amarillafacundo.github.io/wdd231/chamber/images/argentine_commerce.png">
     <meta property="og:url" content="https://facundoemanuelamarilla.github.io/wdd231/chamber/index.html">
     <meta property="og:description" content="Official website for the Santa Fe Chamber of Commerce. Promoting local businesses and community growth.">
