--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -26,7 +26,14 @@
 
 <body>
     <header>
-        <!-- Optional: Add the same header/nav from your other pages -->
+        <header>
+            <nav>
+                <a href="index.html" class="active">Home</a>
+                <a href="directory.html">Directory</a>
+                <a href="join.html">Join</a>
+                <a href="#">Contact</a>
+            </nav>
+        </header>
     </header>
 
     <main class="thankyou-main">
@@ -36,7 +43,8 @@
     </main>
 
     <footer>
-        <!-- Optional: Add the same footer from your other pages -->
+        <p>&copy; <span id="year"></span> Facundo Amarilla | WDD 231 | Santa Fe, Argentina</p>
+        <p id="lastModified"></p>
     </footer>
 </body>
 
