--- a/chamber/join.html
+++ b/chamber/join.html
@@ -25,10 +25,12 @@
 
 <body>
     <header>
-        <a href="index.html" class="active">Home</a>
-        <a href="directory.html">Directory</a>
-        <a href="join.html">Join</a>
-        <a href="#">Contact</a>
+        <nav>
+            <a href="index.html" class="active">Home</a>
+            <a href="directory.html">Directory</a>
+            <a href="join.html">Join</a>
+            <a href="#">Contact</a>
+        </nav>
     </header>
 
     <main class="join-main">
