--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -34,7 +34,7 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="directory.html" class="active">Directory</a>
-            <a href="#">Join</a>
+            <a href="join.html">Join</a>
             <a href="#">Contact</a>
         </nav>
     </header>
