--- a/chamber/index.html
+++ b/chamber/index.html
@@ -29,7 +29,7 @@
         <nav>
             <a href="index.html" class="active">Home</a>
             <a href="directory.html">Directory</a>
-            <a href="#">Join</a>
+            <a href="join.html">Join</a>
             <a href="#">Contact</a>
         </nav>
     </header>
