fix issues from page audit

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <meta name="author" content="Facundo Amarilla">
-    <meta name="description" content="">
+    <meta name="description" content="Join the Santa Fe Chamber of Commerce and become part of a growing community that supports local businesses and economic development.">
     <meta property="og:title" content="Santa Fe Chamber of Commerce | Join">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://amarillafacundo.github.io/wdd231/chamber/images/argentine_commerce.png">
@@ -35,7 +35,7 @@
 
     <main class="join-main">
         <h1>Join the Chamber</h1>
-
+        
         <form method="get" action="thankyou.html" class="join-form">
             <label>
                 First Name:
