--- a/project-siteplan.html
+++ b/project-siteplan.html
@@ -2,15 +2,14 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fitness for Beginners - Site Plan</title>
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&family=Oswald:wght@300&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&family=Oswald:wght@300&display=swap" rel="stylesheet">
 
     <style>
         body {
@@ -48,14 +47,12 @@
 
     <section>
         <h2>Site Name</h2>
-        <p><strong>FitStart</strong> - This name reflects the purpose of helping people begin their fitness journey with
-            motivation and simple routines.</p>
+        <p><strong>FitStart</strong> - This name reflects the purpose of helping people begin their fitness journey with motivation and simple routines.</p>
     </section>
 
     <section>
         <h2>Site Purpose</h2>
-        <p>This site helps beginners start their fitness journey at home. It includes illustrated workout routines,
-            habit-building tips, and healthy lifestyle guidance.</p>
+        <p>This site helps beginners start their fitness journey at home. It includes illustrated workout routines, habit-building tips, and healthy lifestyle guidance.</p>
     </section>
 
     <section>
@@ -88,8 +85,7 @@
 
     <section>
         <h2>Wireframes</h2>
-        <p>Sketches will show layout for mobile and desktop home pages, including logo, nav, hero section, and key
-            content areas.</p>
+        <p>Sketches will show layout for mobile and desktop home pages, including logo, nav, hero section, and key content areas.</p>
         <ul>
             <li><strong>Mobile View:</strong> Logo, hamburger menu, intro section, list of routines</li>
             <li><strong>Desktop View:</strong> Horizontal nav, hero banner, routines in columns or grid, footer</li>
