--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -26,7 +26,8 @@
 
 <body class="discover">
     <header>
-        <h1>Santa Fe Chamber of Commerce</h1>
+        <h1>Santa Fe Chamber of Commerce | Discover</h1>
+        <section class="intro">...</section>
         <nav>
             <a href="index.html" class="active">Home</a>
             <a href="directory.html">Directory</a>
