--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -5,10 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>Santa Fe Chamber of Commerce | Discover</title>
-    
-    <meta name="description" content="Discover page for the Santa Fe Chamber of Commerce">
-    <meta property="og:title" content="Santa Fe Chamber of Commerce | Home">
+    <title>Discover | Santa Fe Chamber of Commerce</title>
+    <meta name="description" content="Explore local interests, highlights, and events in Santa Fe through the Chamber's Discover page.">
+    <meta property="og:title" content="Santa Fe Chamber of Commerce | Discover">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://amarillafacundo.github.io/wdd231/chamber/images/argentine_commerce.png">
     <meta property="og:url" content="https://facundoemanuelamarilla.github.io/wdd231/chamber/index.html">
