update some things

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#003366">
     
     <title>Discover | Santa Fe Chamber of Commerce</title>
     <meta name="description" content="Explore local interests, highlights, and events in Santa Fe through the Chamber's Discover page.">
