--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -35,7 +35,7 @@
             <a href="index.html">Home</a>
             <a href="directory.html" class="active">Directory</a>
             <a href="join.html">Join</a>
-            <a href="#">Contact</a>
+            <a href="discover.html">Contact</a>
         </nav>
     </header>
 
