--- a/chamber/index.html
+++ b/chamber/index.html
@@ -30,7 +30,7 @@
             <a href="index.html" class="active">Home</a>
             <a href="directory.html">Directory</a>
             <a href="join.html">Join</a>
-            <a href="#">Contact</a>
+            <a href="discover.html">Contact</a>
         </nav>
     </header>
 
