--- a/chamber/join.html
+++ b/chamber/join.html
@@ -29,7 +29,7 @@
             <a href="index.html" class="active">Home</a>
             <a href="directory.html">Directory</a>
             <a href="join.html">Join</a>
-            <a href="#">Contact</a>
+            <a href="discover.html">Contact</a>
         </nav>
     </header>
 
