--- a/final/index.html
+++ b/final/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Amarilla Facundo">
 
     <!-- Fonts and CSS -->
-    <link rel="icon" href="workout_home.ico">
+    <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
