--- a/final/index.html
+++ b/final/index.html
@@ -20,7 +20,7 @@
 <body>
     <header>
         <a href="index.html">
-            <img src="images/workout_home.png" alt="Fitness for Beginners Logo" style="height: 50px;" />
+            <img src="images/logo.png" alt="Fitness for Beginners Logo" style="height: 50px;" />
         </a>
     
         <button id="menu-btn" aria-label="Menu">&#9776;</button>
@@ -34,6 +34,8 @@
             </ul>
         </nav>
     </header>
+
+
 
 
 
