update workout html

--- a/final/workout.html
+++ b/final/workout.html
@@ -30,28 +30,28 @@
 
     <main>
         <section class="page-intro">
-            <h1>FitStart: Workout Plans</h1>
+            <h1><span class="site-title">FitStart</span> Workout Plans</h1>
             <p>Start small with these easy, equipment-free exercises you can do at home.</p>
         </section>
 
         <section class="workout-grid">
             <div class="workout-card">
-                <img src="images/jumping-jacks.png" alt="Jumping Jacks">
+                <img src="images/jumping-jacks.webp" alt="Jumping Jacks">
                 <h2>Jumping Jacks</h2>
                 <p>Great for warming up your entire body.</p>
             </div>
             <div class="workout-card">
-                <img src="images/squats.png" alt="Bodyweight Squats">
+                <img src="images/squats.webp" alt="Bodyweight Squats">
                 <h2>Bodyweight Squats</h2>
                 <p>Strengthen your legs and glutes without equipment.</p>
             </div>
             <div class="workout-card">
-                <img src="images/pushups.png" alt="Push-Ups">
+                <img src="images/pushups.webp" alt="Push-Ups">
                 <h2>Push-Ups</h2>
                 <p>Build upper body strength with good form.</p>
             </div>
             <div class="workout-card">
-                <img src="images/plank.png" alt="Plank Hold">
+                <img src="images/plank.webp" alt="Plank Hold">
                 <h2>Plank Hold</h2>
                 <p>Engage your core and improve posture.</p>
             </div>
@@ -59,8 +59,9 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Fitness for Beginners</p>
+        <p>&copy; 2025 <span class="site-title">FitStart</span></p>
     </footer>
+
 
     <script src="scripts.js"></script>
 </body>
