--- a/final/index.html
+++ b/final/index.html
@@ -39,7 +39,7 @@
         <section class="hero">
             <img src="images/hero.webp" alt="Beginner Fitness Banner" class="hero-img">
             <div class="hero-text">
-                <h1>Welcome to <span>FitStart</span></h1>
+                <h1>Welcome to <span class="site-title">FitStart</span></h1>
                 <p>Start your journey with simple routines and healthy habits.</p>
             </div>
         </section>
@@ -61,8 +61,9 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 FitStart</p>
+        <p>&copy; 2025 <span class="site-title">FitStart</span></p>
     </footer>
+
 
 
     <script type="module" src="scripts/main.js"></script>
