--- a/final/habits.html
+++ b/final/habits.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FitStart - Healthy Habits</title>
     <link rel="stylesheet" href="styles/styles.css">
-    <link rel="icon" href="favicon.ico" type="favicon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&family=Oswald:wght@300&display=swap" rel="stylesheet">
+    <link rel="icon" href="favicon.ico" type="favicon">
+
 </head>
 
 <body>
@@ -62,7 +63,7 @@
         <p>&copy; 2025 <span class="site-title">FitStart</span></p>
     </footer>
 
-    <script src="scripts.js"></script>
+    <script type="module" src="scripts/main.js"></script>
 </body>
 
 </html>
