--- a/final/index.html
+++ b/final/index.html
@@ -7,7 +7,7 @@
     <title> FitStart - Home </title></title>
     <meta name="description" content="Start your fitness journey at home with simple workouts and healthy habits.">
     <meta name="author" content="Amarilla Facundo">
-    <link rel="icon" href="favicon.ico" type="favicon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 
     <!-- Fonts and CSS -->
     <link rel="stylesheet" href="styles/styles.css">
