--- a/final/habits.html
+++ b/final/habits.html
@@ -26,6 +26,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="workouts.html">Workouts</a></li>
             <li><a href="habits.html">Healthy Habits</a></li>
+            <li><a href="form.html">Contact</a></li>
         </ul>
     </nav>
 
@@ -63,7 +64,7 @@
         <p>&copy; 2025 <span class="site-title">FitStart</span></p>
     </footer>
 
-    <script type="module" src="scripts/main.js"></script>
+    <script src="scripts/main.js" defer></script>
 </body>
 
 </html>
