--- a/final/index.html
+++ b/final/index.html
@@ -31,7 +31,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="workouts.html">Workouts</a></li>
             <li><a href="habits.html">Healthy Habits</a></li>
-            <li><a href="form.html">Form</a></li>
+            <li><a href="form.html">Contact</a></li>
         </ul>
     </nav>
 
@@ -66,7 +66,7 @@
 
 
 
-    <script type="module" src="scripts/main.js"></script>
+    <script src="scripts/main.js" defer></script>
 </body>
 
 </html>
