--- a/final/workouts.html
+++ b/final/workouts.html
@@ -25,6 +25,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="workouts.html">Workouts</a></li>
             <li><a href="habits.html">Healthy Habits</a></li>
+            <li><a href="form.html">Contact</a></li>
         </ul>
     </nav>
 
@@ -63,7 +64,9 @@
     </footer>
 
 
-    <script type="module" src="scripts/main.js"></script>
+    <script src="scripts/main.js" defer></script>
+    <script src="scripts/workouts.js" defer></script>
+
 
 </body>
 
