--- a/final/form.html
+++ b/final/form.html
@@ -59,6 +59,7 @@
     </footer>
 
     <script src="scripts/main.js" defer></script>
+    <script src="scripts/form.js" defer></script>
 </body>
 
 </html>
