--- a/final/form.html
+++ b/final/form.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FitStart - Contact Us</title>
-    <link rel="icon" href="favicon.ico?v=2" type="image/x-icon">
+    <meta name="description" content="Start your fitness journey at home with simple workouts and healthy habits.">
+    <meta name="author" content="Amarilla Facundo">
+    <link rel="icon" href="images/favicon.ico" type="images/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&family=Oswald:wght@300&display=swap" rel="stylesheet">
@@ -48,7 +50,7 @@
 
                 <button type="submit">Send Message</button>
             </form>
-            
+
         </section>
     </main>
 
