--- a/final/habits.html
+++ b/final/habits.html
@@ -9,7 +9,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&family=Oswald:wght@300&display=swap" rel="stylesheet">
-    <link rel="icon" href="favicon.ico" type="favicon">
+    <meta name="description" content="Start your fitness journey at home with simple workouts and healthy habits.">
+    <meta name="author" content="Amarilla Facundo">
+    <link rel="icon" href="images/favicon.ico" type="images/favicon.ico">
 
 </head>
 
