--- a/final/index.html
+++ b/final/index.html
@@ -7,13 +7,18 @@
     <title> FitStart - Home </title></title>
     <meta name="description" content="Start your fitness journey at home with simple workouts and healthy habits.">
     <meta name="author" content="Amarilla Facundo">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <meta property="og:title" content="FitStart | Simple Fitness for Beginners">
+    <meta property="og:description" content="Start your fitness journey at home with simple workouts and healthy habits.">
+    <meta property="og:image" content=https://amarillafacundo.github.io/wdd231/final/images/hero.webp>
+    <meta property="og:url" content="https://amarillafacundo.github.io/wdd231/final/index.html">
+    <meta property="og:type" content="website">
 
     <!-- Fonts and CSS -->
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&family=Oswald:wght@300&display=swap" rel="stylesheet">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
 </head>
 
