update error validator

--- a/final/index.html
+++ b/final/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> FitStart - Home </title></title>
+    <title> FitStart - Home </title>
     <meta name="description" content="Start your fitness journey at home with simple workouts and healthy habits.">
     <meta name="author" content="Amarilla Facundo">
     <meta property="og:title" content="FitStart | Simple Fitness for Beginners">
