--- a/final/workouts.html
+++ b/final/workouts.html
@@ -46,9 +46,7 @@
             </div>
         </section>
 
-        <section class="workout-grid">
-        </section>
-    </div>
+        <section class="workout-grid"></section>
     </main>
  
     <footer>
