--- a/final/workouts.html
+++ b/final/workouts.html
@@ -46,7 +46,8 @@
             </div>
         </section>
 
-        <section class="workout-grid"></section>
+        <div class="workout-grid">
+        </div>
     </main>
  
     <footer>
