--- a/final/form-action.html
+++ b/final/form-action.html
@@ -6,9 +6,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FitStart - Thank You</title>
-    <meta name="description" content="Start your fitness journey at home with simple workouts and healthy habits.">
+    <meta name="description" content="Thank you for contacting FitStart. Your message has been received, and we will get back to you soon.">
     <meta name="author" content="Amarilla Facundo">
-    <link rel="icon" href="images/favicon.ico" type="images/favicon.ico">
+    
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&family=Oswald:wght@300&display=swap" rel="stylesheet">
