--- a/final/habits.html
+++ b/final/habits.html
@@ -4,14 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Learn how to build sustainable healthy habits with FitStart. Get practical tips and advice for a better lifestyle, nutrition, and well-being.">
+    <meta name="author" content="Amarilla Facundo">
     <title>FitStart - Healthy Habits</title>
+    
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&family=Oswald:wght@300&display=swap" rel="stylesheet">
-    <meta name="description" content="Start your fitness journey at home with simple workouts and healthy habits.">
-    <meta name="author" content="Amarilla Facundo">
-    <link rel="icon" href="images/favicon.ico" type="images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 
 </head>
 
