--- a/final/index.html
+++ b/final/index.html
@@ -4,33 +4,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> FitStart - Home </title>
-    <meta name="description" content="Start your fitness journey at home with simple workouts and healthy habits.">
+    <title>FitStart - Home</title>
+    <meta name="description" content="Start your fitness journey at home with simple routines and healthy habits.">
     <meta name="author" content="Amarilla Facundo">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+
     <meta property="og:title" content="FitStart | Simple Fitness for Beginners">
     <meta property="og:description" content="Start your fitness journey at home with simple workouts and healthy habits.">
-    <meta property="og:image" content=https://amarillafacundo.github.io/wdd231/final/images/hero.webp>
+    <meta property="og:image" content="https://amarillafacundo.github.io/wdd231/final/images/hero.webp">
     <meta property="og:url" content="https://amarillafacundo.github.io/wdd231/final/index.html">
     <meta property="og:type" content="website">
 
-    <!-- Fonts and CSS -->
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&family=Oswald:wght@300&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
-
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&family=Oswald:wght@300&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <header>
-        <a href="index.html">
-            <img src="images/workout_home.png" alt="FitStart Logo" style="height: 50px;">
+        <a href="index.html" class="logo-link">
+            <img src="images/workout_home.png" alt="FitStart Logo">
         </a>
-    
+
         <button id="menu-btn" aria-label="Menu">&#9776;</button>
     </header>
-    
+
     <nav id="nav-menu" class="hidden">
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -51,7 +51,8 @@
         <section class="intro">
             <h2>Start Your Fitness Journey</h2>
             <p>
-                Discover simple and effective ways to start working out, improve your health, and develop better habits—perfect for complete beginners!
+                Discover simple and effective ways to start working out, improve your health, and develop better
+                habits—perfect for complete beginners!
             </p>
         </section>
         <section class="interests">
@@ -68,8 +69,6 @@
     <footer>
         <p>&copy; 2025 <span class="site-title">FitStart</span></p>
     </footer>
-
-
 
     <script src="scripts/main.js" defer></script>
 </body>
