--- a/final/workouts.html
+++ b/final/workouts.html
@@ -4,20 +4,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FitStart - Workout Plans</title>
     <meta name="description" content="Explore beginner-friendly workout plans and track your progress with FitStart. Find easy, equipment-free exercises to do at home.">
     <meta name="author" content="Amarilla Facundo">
-    <title>FitStart - Workout Plans</title>
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+
+    <meta property="og:title" content="FitStart | Workout Plans">
+    <meta property="og:description" content="Explore simple and effective workout plans designed for beginners to do at home with no equipment.">
+    <meta property="og:image" content="https://amarillafacundo.github.io/wdd231/final/images/hero.webp">
+    <meta property="og:url" content="https://amarillafacundo.github.io/wdd231/final/workouts.html">
+    <meta property="og:type" content="website">
+
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&family=Oswald:wght@300&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+    
 </head>
 
 <body>
     <header>
-        <a href="index.html">
-            <img src="images/workout_home.png" alt="FitStart Logo" style="height: 50px;">
+    <a href="index.html" class="logo-link">
+        <img src="images/workout_home.png" alt="FitStart Logo">
         </a>
         <button id="menu-btn" aria-label="Menu">&#9776;</button>
     </header>
