update changes favicon

--- a/final/form-action.html
+++ b/final/form-action.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Thank you for contacting FitStart. Your message has been received, and we will get back to you soon.">
     <meta name="author" content="Amarilla Facundo">
     
-    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&family=Oswald:wght@300&display=swap" rel="stylesheet">
