--- a/final/form.html
+++ b/final/form.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Have a question or feedback? Contact the FitStart team with any inquiries about our workout plans, healthy habits, or general support.">
     <meta name="author" content="Amarilla Facundo">
 
-    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&family=Oswald:wght@300&display=swap" rel="stylesheet">
