--- a/final/workouts.html
+++ b/final/workouts.html
@@ -7,7 +7,7 @@
     <title>FitStart - Workout Plans</title>
     <meta name="description" content="Explore beginner-friendly workout plans and track your progress with FitStart. Find easy, equipment-free exercises to do at home.">
     <meta name="author" content="Amarilla Facundo">
-    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
     <meta property="og:title" content="FitStart | Workout Plans">
     <meta property="og:description" content="Explore simple and effective workout plans designed for beginners to do at home with no equipment.">
