update meta habits and form

--- a/final/form.html
+++ b/final/form.html
@@ -13,6 +13,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&family=Oswald:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/styles.css">
+
+    <meta property="og:title" content="FitStart - Contact Us">
+    <meta property="og:description" content="Have a question or feedback? Contact the FitStart team with any inquiries about our workout plans, healthy habits, or general support.">
+    <meta property="og:image" content="https://amarillafacundo.github.io/wdd231/final/images/hero.webp">
+    <meta property="og:url" content="https://amarillafacundo.github.io/wdd231/final/form.html">
+    <meta property="og:type" content="website">
+
 </head>
 
 <body>
