--- a/final/habits.html
+++ b/final/habits.html
@@ -14,6 +14,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&family=Oswald:wght@300&display=swap" rel="stylesheet">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
+    <meta property="og:title" content="FitStart - Healthy Habits">
+    <meta property="og:description" content="Learn how to build sustainable healthy habits with FitStart. Get practical tips and advice for a better lifestyle, nutrition, and well-being.">
+    <meta property="og:image" content="https://amarillafacundo.github.io/wdd231/final/images/hero.webp">
+    <meta property="og:url" content="https://amarillafacundo.github.io/wdd231/final/habits.html">
+    <meta property="og:type" content="website">
+
 </head>
 
 <body>
