--- a/final/form-action.html
+++ b/final/form-action.html
@@ -20,7 +20,7 @@
 
     <header>
         <a href="index.html">
-            <img src="images/workout_home.png" alt="FitStart Logo" style="height: 50px;">
+            <img src="images/workout_home.png" alt="FitStart Logo">
         </a>
 
         <button id="menu-btn" aria-label="Menu">&#9776;</button>
