--- a/final/index.html
+++ b/final/index.html
@@ -41,7 +41,7 @@
 
     <main>
         <section class="hero">
-            <img src="images/hero.webp" alt="Beginner Fitness Banner" class="hero-img">
+            <img src="images/hero.webp" alt="Beginner Fitness Banner" class="hero-img" loading="lazy">
             <div class="hero-text">
                 <h1>Welcome to <span class="site-title">FitStart</span></h1>
                 <p>Start your journey with simple routines and healthy habits.</p>
