lazy to hero.webp all pages

--- a/final/habits.html
+++ b/final/habits.html
@@ -25,7 +25,7 @@
 <body>
     <header>
         <a href="index.html">
-            <img src="images/workout_home.png" alt="FitStart Logo">
+            <img src="images/hero.webp" alt="Beginner Fitness Banner" class="hero-img" loading="lazy">
         </a>
         <button id="menu-btn" aria-label="Menu">&#9776;</button>
     </header>
