--- a/final/form-action.html
+++ b/final/form-action.html
@@ -20,7 +20,7 @@
 
     <header>
         <a href="index.html">
-            <img src="images/workout_home.png" alt="FitStart Logo">
+            <img src="images/hero.webp" alt="Beginner Fitness Banner" class="hero-img" loading="lazy">
         </a>
 
         <button id="menu-btn" aria-label="Menu">&#9776;</button>
